# vijil-dome

./: .gitignore  CLAUDE.md  INSIGHTS.md  Makefile  README.md  mypy.ini  pyproject.toml  pyproject.toml.bak
.github/: CODEOWNERS
.github/workflows/: publish.yml  python-app.yaml
demo/: trust_demo.py  trust_demo_live.py
docs/: AGENTS.md  policy-section-router-design.md
docs/ci/: do-inference-models.md
docs/plans/: 2026-02-04-darwin-telemetry-integration-design.md  2026-02-13-strands-dome-adapter-design.md  2026-02-13-strands-dome-adapter-plan.md  2026-03-12-dome-auto-configuration-prd.md  2026-04-29-thin-client-inference-server-design.md
docs/reports/: 2026-04-01-bias-detector-report.md  2026-04-25-architectural-orientation.md
docs/trust/: 2026-04-03-trust-runtime-design.md  2026-04-03-trust-runtime-plan.md  2026-04-03-trust-runtime-prd.md  2026-04-10-iam-vs-spiffe-identity.md  2026-04-10-trust-runtime-gap-analysis.md  2026-06-04-in-process-control-bypass-threat-model.md  2026-06-04-mac-policy-schema.md  2026-06-04-tamper-evident-identity-mac-plan.md  vijil-trust-runtime-brief.md
examples/: custom_guardrail.py  getting_started.py  gpt_oss_safeguard_guardrail.toml  langchain_example.py  policy_guardrail_quickstart.py  policy_sections_s3_example.py
experiments/prompt_injection/: README.md
experiments/prompt_injection/data/: .gitignore
experiments/prompt_injection/scripts/: build_dataset.py  run_eval.py  serve_openai_compat_transformers.py
infra/ci-s3-access/: create-oidc-role.sh
scripts/bias-detector/: relabel_safeguard.py  train.py  train_multitask.py
vijil_dome/: Dome.py  __init__.py  core.py  defaults.py  types.py
vijil_dome/cli/: manifest_cmd.py
vijil_dome/controls/: __init__.py  decorator.py  engine.py  errors.py  models.py  selectors.py
vijil_dome/controls/evaluators/: __init__.py  base.py  dome_bridge.py  expr.py  json_eval.py  list_eval.py  regex.py
vijil_dome/deploy/: DEPLOYMENT.md  spire-cluster-spiffeid.yaml  spire-registrations.sh  spire-values-production.yaml  spire-values.yaml  test-agent-pod.yaml  vault-production.yaml
vijil_dome/deploy/identity-delegate/: Dockerfile  k8s.yaml  main.py
vijil_dome/deploy/llm-proxy/: Dockerfile  README.md  config.example.json  go.mod  k8s.yaml  vault-setup.sh
vijil_dome/detectors/: DETECTOR_INFO.md  __init__.py  detection_api.py  inference_stub.py  remote_dispatcher.py
vijil_dome/detectors/methods/: __init__.py  bias_eeoc.py  embedding_models.py  encoding_heuristics.py  factcheck_roberta.py  flashtext_kw_banlist.py  gpt_oss_safeguard_policy.py  hhem_hallucination.py  jb_perplexity_heuristics.py  llamaguard_groq.py  llm_models.py  openai_models.py  perspective.py  pi_hf_deberta.py  pi_hf_mbert.py  pii_presidio.py  policy_sections_detector.py  prompt_harmfulness.py  remote_method.py  secret_detector.py  stereotype_eeoc.py  toxicity_deberta.py  toxicity_mbert.py
vijil_dome/detectors/policies/: __init__.py  sample_policy_sections.json  spam_policy.md
vijil_dome/detectors/utils/: embeddings_base.py  hf_model.py  llm_api_base.py  sliding_window.py  vijil_inference.py
vijil_dome/embeds/: embedder.py  examples.py
vijil_dome/embeds/index/: __init__.py  basic.py  faiss_index.py
vijil_dome/embeds/models/: __init__.py  openai.py
vijil_dome/examples/: creating_domed_clients.ipynb  scanning_example.ipynb  test.py
vijil_dome/guardrails/: __init__.py  config_parser.py  defaults.py
vijil_dome/guardrails/examples/: ex_guarded_chat_completions.py
vijil_dome/guardrails/instrumentation/: metrics.py
vijil_dome/instrumentation/: tracing.py
vijil_dome/instrumentation/examples/: ex_guardrail.py  otel_identity_smoke_test.py
vijil_dome/instrumentation/logging/: __init__.py  readme.md
vijil_dome/integrations/a2a/: __init__.py  middleware.py
vijil_dome/integrations/adk/: __init__.py  callbacks.py
vijil_dome/integrations/agentcore/: README.md  __init__.py  background.py  otel_exporters.py  otel_lifecycle.py  settings.py
vijil_dome/integrations/examples/: gpt_oss_safeguard_README.md  gpt_oss_safeguard_example.py  langchain_integration.ipynb
vijil_dome/integrations/instrumentation/: otel_instrumentation.py
vijil_dome/integrations/langchain/: runnable.py
vijil_dome/integrations/mcp/: __init__.py  wrapper.py
vijil_dome/integrations/strands/: __init__.py  hooks.py
vijil_dome/integrations/vijil/: __init__.py  evaluate.py  telemetry.py
vijil_dome/tests/: test_adk_callbacks.py  test_batch.py  test_darwin_telemetry.py  test_defaults.py  test_dome_obj.py  test_dome_payload.py  test_dome_s3_policy.py  test_embeds_index.py  test_guardrail_infrastructure.py  test_langchain_runnable.py  test_large_inputs.py  test_lazy_imports.py  test_otel_instrumentation.py  test_otel_metric_names.py  test_parallel_config.py  test_policy_sections_integration.py  test_reliability_batch2.py  test_s3_config_loader.py  test_shadow_mode.py  test_strands_hooks.py  test_trace_logging.py
vijil_dome/tests/controls/: test_ac_compat.py  test_adapters.py  test_cel_eval.py  test_core.py  test_decorator.py  test_dome_bridge.py  test_engine.py  test_evaluators.py  test_json_eval.py  test_models.py  test_policy_loading.py  test_selectors.py
vijil_dome/tests/detectors/: _stub_server.py  test_detection_api.py  test_generic_detectors.py  test_gpt_oss_sg_policy.py  test_gpt_oss_sg_policy_content.py  test_integrity_detectors.py  test_llamaguard_groq.py  test_moderations_detectors.py  test_policy_e2e.py  test_policy_sections_detector.py  test_privacy_detectors.py  test_routing.py  test_security_detectors.py  test_thin_client_e2e.py
vijil_dome/tests/integrations/: __init__.py  test_a2a_middleware.py  test_agentcore_background.py  test_agentcore_otel_exporters.py  (+2 more)
vijil_dome/trust/: __init__.py  attestation.py  audit.py  constraints.py  delta.py  guard.py  identity.py  manifest.py  models.py  policy.py  runtime.py
vijil_dome/tutorials/: README.md
vijil_dome/utils/: __init__.py  config_loader.py  faiss_loader.py  policy_config_builder.py  policy_loader.py  s3_utils.py
vijil_dome/vijil_dome/: Dome.py  defaults.py
(+104 files in other folders)
