[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "vijil-dome"
version = "1.7.0"
description = ""
authors = [
    "Pradeep Das <pradeep@vijil.ai>",
    "Varun Cherukuri <varun@vijil.ai>",
    "Anuj Tambwekar <anuj@vijil.ai>",
    "Subho Majumdar <subho@vijil.ai>"
]
readme = "README.md"
exclude = [
    "vijil_dome/examples",
    "vijil_dome/tutorials"
]

[tool.poetry.dependencies]
python = ">=3.11,<3.14"

# --- Core: thin client deps (always installed) ---
pydantic = "^2.11.7"
httpx = ">=0.27.0"
flashtext = "^2.7"
detect-secrets = "^1.5.0"
toml = "^0.10.2"
nest-asyncio = "^1.6.0"

# --- Deps used by local detectors and Dome internals ---
# Required for the local-mode detectors today. Moving them to optional
# would break existing installs, so they stay in core for now. Future
# work: split a true thin-client distribution that drops these.
openai = ">=1.93.2"
numpy = "^2.1.0"
scipy = "^1.16.0"
pandas = "^2.3.1"
tqdm = "^4.67.1"
huggingface-hub = "^0.33.2"
python-dotenv = "^1.1.1"
grpcio = "^1.73.1"
aiohttp = "^3.14.0"

# --- Heavy deps: optional, gated behind extras ---
torch = {version = "^2.8.0", optional = true}
transformers = {version = "^4.53.1", optional = true}
sentence-transformers = {version = "^5.0.0", optional = true}
litellm = {version = ">=1.83.0,<2.0.0,!=1.82.7,!=1.82.8", optional = true}
presidio_analyzer = {version = "^2.2.361", optional = true}
presidio_anonymizer = {version = "^2.2.361", optional = true}
pytest = {version = "^8.4.1", optional = true}
pytest-asyncio = {version = "^1.0.0", optional = true}
google-api-python-client = {version = "^2.176.0", optional = true}
annoy = {version = "^1.17.3", optional = true}
boto3 = {version = "^1.34.0", optional = true}
faiss-cpu = {version = "^1.7.4", optional = true}
mcp = {version ="^1.21.2", optional = true}
fastmcp = {version ="^3.2.0", optional = true}
strands-agents = {version = "^1.0.0", optional = true}
cryptography = {version = ">=43.0.0", optional = true}
typer = {version = ">=0.9.0", optional = true}
langgraph = {version = ">=0.2.0", optional = true}
google-adk = {version = ">=1.0.0", optional = true}

# opentelemetry stack — used heavily in your instrumentation
opentelemetry-api = {version = "^1.34.1", optional = true}
opentelemetry-exporter-gcp-monitoring = {version = "^1.9.0a0", optional = true}
opentelemetry-exporter-gcp-trace = {version = "^1.9.0", optional = true}
opentelemetry-exporter-otlp = {version = "^1.34.1", optional = true}
opentelemetry-exporter-otlp-proto-common = {version = "^1.34.1", optional = true}
opentelemetry-exporter-otlp-proto-grpc = {version = "^1.34.1", optional = true}
opentelemetry-exporter-otlp-proto-http = {version = "^1.34.1", optional = true}
opentelemetry-instrumentation = {version = "^0.55b1", optional = true}
opentelemetry-instrumentation-asyncio = {version = "^0.55b1", optional = true}
opentelemetry-instrumentation-logging = {version = "^0.55b1", optional = true}
opentelemetry-instrumentation-threading = {version = "^0.55b1", optional = true}
opentelemetry-propagator-gcp = {version = "^1.9.0", optional = true}
opentelemetry-proto = {version = "^1.34.1", optional = true}
opentelemetry-resourcedetector-gcp = {version = "^1.9.0a0", optional = true}
opentelemetry-sdk = {version = "^1.34.1", optional = true}
opentelemetry-semantic-conventions = {version = "^0.55b1", optional = true}

# --- Controls evaluator deps (PR #194) ---
pyyaml = {version = ">=6.0", optional = true}
jsonschema = {version = ">=4.0", optional = true}
cel-python = {version = ">=0.1.0", optional = true}
google-re2 = {version = ">=1.0", optional = true}

# --- Identity deps (DOME-163) ---
# py-spiffe: SPIRE Workload API client for X.509 SVID attestation.
# Optional so core installs stay slim; the `from spiffe import
# WorkloadApiClient` guard in vijil_dome/trust/identity.py only resolves
# to a real client when this extra is installed. Without it declared and
# locked here, X.509 attestation required a manual `pip install spiffe`.
#
# Capped < 0.2.4: from 0.2.4 the vendored protobuf stubs are generated with
# protoc gencode 6.31.1, whose runtime-version guard refuses to load under a
# protobuf 5.x runtime. The opentelemetry stack pins protobuf < 6.0
# (opentelemetry-proto, grpcio-status), so 0.2.4+ raises protobuf
# VersionError at `import spiffe` — and the ImportError guard in identity.py
# does not catch it, crashing the module. 0.2.3 ships gencode 4.25.1 (no
# runtime guard) and imports cleanly under protobuf 5.x. Revisit when the
# OTEL pins move to protobuf 6.x.
spiffe = {version = ">=0.2.0,<0.2.4", optional = true}

[tool.poetry.extras]
# --- Detection extras ---
local = ["torch", "transformers", "sentence-transformers"]
llm = ["litellm"]
pii = ["presidio_analyzer", "presidio_anonymizer"]

# --- Full: everything for backward compatibility ---
# pip install vijil-dome[full] = current behavior (all local detectors)
full = [
    "torch", "transformers", "sentence-transformers",
    "litellm",
    "presidio_analyzer", "presidio_anonymizer",
]

# --- Infrastructure extras ---
opentelemetry = [
    "opentelemetry-api",
    "opentelemetry-exporter-gcp-monitoring",
    "opentelemetry-exporter-gcp-trace",
    "opentelemetry-exporter-otlp",
    "opentelemetry-exporter-otlp-proto-common",
    "opentelemetry-exporter-otlp-proto-grpc",
    "opentelemetry-exporter-otlp-proto-http",
    "opentelemetry-instrumentation",
    "opentelemetry-instrumentation-asyncio",
    "opentelemetry-instrumentation-logging",
    "opentelemetry-instrumentation-threading",
    "opentelemetry-propagator-gcp",
    "opentelemetry-proto",
    "opentelemetry-resourcedetector-gcp",
    "opentelemetry-sdk",
    "opentelemetry-semantic-conventions",
]
embeddings = [ "annoy", "faiss-cpu", ]
google = [ "google-api-python-client", ]
strands = [ "strands-agents", ]
mcp = ["mcp", "fastmcp"]
s3 = [ "boto3", ]
# SPIFFE X.509 SVID attestation. Standalone so `pip install vijil-dome[identity]`
# enables real attestation; also folded into the trust extras since the
# trust runtime's identity path (vijil_dome/trust/identity.py) is what
# consumes it.
identity = [ "spiffe", ]
trust = [ "cryptography", "httpx", "spiffe", ]
trust-cli = [ "cryptography", "httpx", "typer", "spiffe", ]
trust-adapters = [ "cryptography", "httpx", "langgraph", "google-adk", "strands-agents", "spiffe", ]
controls = [ "pyyaml", ]
controls-full = [ "pyyaml", "jsonschema", "cel-python", "google-re2", ]
langchain = [ ]  # no langchain usage detected — you can add back if needed
test = [
    "pytest",
    "pytest-asyncio"
]

# Dev deps for the thin-client e2e stub server. Test files import these
# (vijil_dome/detectors/inference_stub.py uses fastapi; the e2e test
# spins it up with uvicorn). Not shipped to end users.
[tool.poetry.group.dev.dependencies]
fastapi = "^0.136.1"
uvicorn = "^0.46.0"
